--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
     - name: waka-readme-stats
       uses: athul/waka-readme@master
       with:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
         WAKATIME_API_KEY: ${{ secrets.WAKA_API_KEY }}
         TIME_RANGE: last_6_months
         COMMIT_MESSAGE: Updated the Readme
